@@ -1,3 +1,8 @@
+2002-08-30  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	* gnome-calc.c: Keypad are read correctly when numlock
+	is on (bug #85356, patch from twaugh@redhat.com)
+
 2002-08-12  Glynn Foster  <glynn.foster@sun.com>
 
 	* gcalc.c: Mark string in about dialog for translation.
