@@ -1,3 +1,9 @@
+2002-08-30  Frederic Crozat  <fcrozat@mandrakesoft.com>
+
+	reviewed by: <delete if not using a buddy>
+
+	* gcalc/gnome-calc.c:
+
 2002-08-28  Glynn Foster <glynn.foster@sun.com>
 
 	* configure.in: release 2.0.4 " Amygdala "
